@@ -58,6 +58,16 @@ test_that("newdata in summary.flexsurvreg: extra covariates in the list",{
     expect_equal(su1, su2)
 })
 
+
+test_that("newdata in summary.flexsurvreg: are missing values passed through or dropped",{
+    luna <- lung[1:5,]
+    luna$age[1] <- NA
+    summ <- summary(fl3, newdata = luna, B = 0, t=100, tidy=TRUE)
+    expect_true(is.na(summ$est[1]))
+    summ <- summary(fl3, newdata = luna, B = 0, t=100, tidy=TRUE, na.action=na.omit)
+    expect_true(!is.na(summ$est[1]))
+})
+
 test_that("newdata in summary.flexsurvreg: missing covariates, factor not supplied as factor",{
     expect_error(summary(fl3, newdata = list(age=10), B = 0), "Value of covariate .+ not supplied")
 })
